--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </select>
       <input type="submit" value="Jugar" class="js-computerButton" />
     </form>
-    <button>Vamos a jugar!</button>
+    <button class="js-messageButton">Vamos a jugar!</button>
     <p>Jugador: 0</p>
     <p>Computadora: 0</p>
 
