correct compareMovements function

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <form action="" class="controls">
       <select name="move_selected" id="move_selected" class="js-moveSelected">
         <option value="move">Seleccione su jugada</option>
-        <option value="stone">Piedra</option>
-        <option value="paper">Papel</option>
-        <option value="scissors">Tijera</option>
+        <option value="piedra">Piedra</option>
+        <option value="papel">Papel</option>
+        <option value="tijera">Tijera</option>
       </select>
       <input type="submit" value="Jugar" class="js-computerButton" />
     </form>
