--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
       <input type="submit" value="Jugar" class="js-computerButton" />
     </form>
     <button class="js-messageButton">Vamos a jugar!</button>
-    <p class="js-playerAccount">Jugador: 0</p>
-    <p class="js-computerAccount">Computadora: 0</p>
+    <p class="js-playerAccount">Jugador:</p>
+    <p class="js-computerAccount">Computadora:</p>
 
     <script type="text/javascript" src="./js/main.js"></script>
   </body>
