show reset button

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <button class="js-messageButton">Vamos a jugar!</button>
     <p class="js-playerAccount">Jugador:</p>
     <p class="js-computerAccount">Computadora:</p>
+    <button class="js-reset hidden">Reiniciar Juego</button>
 
     <script type="text/javascript" src="./js/main.js"></script>
   </body>
