--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
       </select>
       <input type="submit" value="Jugar" class="js-computerButton" />
     </form>
+    <p class="js-computerText">La computadora ha elegido:</p>
     <button class="js-messageButton">Vamos a jugar!</button>
     <p class="js-playerAccount">Jugador:</p>
     <p class="js-computerAccount">Computadora:</p>
