--- a/index.html
+++ b/index.html
@@ -4,26 +4,42 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/main.css" />
     <title>Juego Piedra, Papel y Tijera</title>
   </head>
   <body>
-    <h1>Juego Piedra, Papel y Tijera</h1>
-    <h2>Introduce aquí tu jugada</h2>
-    <form action="" class="controls">
-      <select name="move_selected" id="move_selected" class="js-moveSelected">
-        <option value="move">Seleccione su jugada</option>
-        <option value="piedra">Piedra</option>
-        <option value="papel">Papel</option>
-        <option value="tijera">Tijera</option>
-      </select>
-      <input type="submit" value="Jugar" class="js-computerButton" />
-    </form>
-    <p class="js-computerText">La computadora ha elegido:</p>
-    <button class="js-messageButton">Vamos a jugar!</button>
-    <p class="js-playerAccount">Jugador:</p>
-    <p class="js-computerAccount">Computadora:</p>
-    <button class="js-reset hidden">Reiniciar Juego</button>
+    <main class="mainContainer">
+      <h1 class="title">Juego Piedra, Papel y Tijera</h1>
+      <h2 class="moveTitle">Introduce aquí tu jugada:</h2>
+      <form action="" class="form">
+        <select
+          name="move_selected"
+          id="move_selected"
+          class="form__select js-moveSelected"
+        >
+          <option value="move">Seleccione su jugada</option>
+          <option value="piedra">Piedra</option>
+          <option value="papel">Papel</option>
+          <option value="tijera">Tijera</option>
+        </select>
+        <input
+          type="submit"
+          value="Jugar"
+          class="form__input js-computerButton"
+        />
+      </form>
+      <p class="computerText js-computerText">La computadora ha elegido:</p>
+      <button class="messageButton js-messageButton">Vamos a jugar!</button>
+      <p class="playerAcc js-playerAccount">Jugador:</p>
+      <p class="computerAcc js-computerAccount">Computadora:</p>
+      <button class="resetButton js-reset hidden">Reiniciar Juego</button>
+    </main>
 
     <script type="text/javascript" src="./js/main.js"></script>
   </body>
